<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/dashboard"
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_vector_home"/>

    <item
        android:title="@string/change_password"
        android:id="@+id/nav_change_password"
        android:icon="@drawable/ic_change_password"/>

    <item
        android:title="@string/bill_list"
        android:id="@+id/nav_bill_list"
        android:icon="@drawable/ic_vector_bill_list"/>

    <item
        android:title="@string/setting"
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_vectors_settings"/>


    <item
        android:title="@string/share_app"
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_vector_share"/>


    <item
        android:title="@string/logout"
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_vector_logout"/>
</menu>