<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".view.activity.BillListActivity">

    <RelativeLayout
        android:id="@+id/rr_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_vector_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/bill_list"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:id="@+id/iv_search"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/iv_custom_calender"
            android:src="@drawable/ic_vector_search"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:id="@+id/iv_custom_calender"
            android:src="@drawable/ic_vector_calendar"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_color"
        android:visibility="gone"
        android:id="@+id/rr_toolbar_search">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_vector_back"
            android:padding="5dp"
            android:id="@+id/iv_back_search"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search"
            android:backgroundTint="@color/app_color"
            android:id="@+id/edit_search"
            android:inputType="text"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/iv_back_search"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_custom_day"
        android:weightSum="7">


        <TextView
            android:id="@+id/textDateStart"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/from_date"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/textAll"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/textDateEnd"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/to_date"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:id="@+id/linear_layout_today_date"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_today_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/today_date"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view_bill_list"
            android:orientation="vertical"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/not_found"
            android:id="@+id/iv_not_found"/>

    </RelativeLayout>


</LinearLayout>